objects/CameleonCPQ__QxQuote__c.object
<CustomObject>
    <fields>
        <fullName>Existing_No_custo_inherited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing_No_custo_inherited</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Payment_Term_Type__c</fullName>
        <label>Payment Term Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Renewal_Options__c</fullName>
        <label>Renewal Allowed</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Existing_Small_Order_Fee__c</fullName>
        <label>Small Order Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Finance_Queue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Finance Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Follower_relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does the contract allow for dependant pricing relationships?</description>
        <label>Follower Relationship</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forced_Inheritance_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced_Inheritance_Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Forced_inheritance_no_custom_cores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Forced inheritance (no custom cores)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freight__c</fullName>
        <label>Freight</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fully_approved_primary_quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fully approved primary quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Furniture_Core_IGM_Perc__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Furniture Core IGM</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Furniture_Core_Sales__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Furniture Core Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Furniture_Delivery_Fee__c</fullName>
        <label>Furniture Delivery Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Furniture_Price_Cap__c</fullName>
        <label>Furniture Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Furniture_Price_Lock_days__c</fullName>
        <label>Furniture Update Frequency(days)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPO_Flag__c</fullName>
        <formula>OR(Grandparent__r.Current_GPO__c , Great_Grandparent__r.Current_GPO__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPO Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Grandparent_Id__c</fullName>
        <formula>Grandparent__r.AOPS_Cust_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grandparent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent_NCC__c</fullName>
        <label>Grandparent NCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grandparent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Grandparent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Grandparent)</relationshipLabel>
        <relationshipName>PROS_Quotes_GP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Great_Grandparent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Great Grandparent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Quote Great Grandparent)</relationshipLabel>
        <relationshipName>Great_Grandchild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hist_Cash_Rebates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cash Rebates</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Contribution_Margin_Perc__c</fullName>
        <formula>IF(Hist_Total_Contract_Sales_Net__c &gt;0, Hist_Contribution_Margin__c 
/Hist_Total_Contract_Sales_Net__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contribution Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hist_Contribution_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Contribution Margin</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Cost_of_Credit__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Cost of Credit</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Desktop_Delivery__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Desktop Delivery</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Distribution__c</fullName>
        <label>Distribution</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Freight__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Freight $</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Inventory_Valuation__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Inventory Valuation</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Net_IGM_Customer_Margin_Perc__c</fullName>
        <formula>IF(Hist_Total_Contract_Sales_Net__c&gt;0,Hist_Net_IGM_Customer_Margin__c/Hist_Total_Contract_Sales_Net__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net IGM/Customer Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Hist_Net_IGM_Customer_Margin__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Net IGM/Customer Margin</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_O_A_and_Deviated_Funds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>O&amp;A and Deviated Funds</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Outside_Services__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Outside Services</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Performance_Rebates__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Performance Rebates</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Property__c</fullName>
        <label>Property</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Total_Contract_Sales_Gross__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Contract Sales(Gross)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Total_Contract_Sales_Net__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Contract Sales(Net)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Variable_Selling_Payroll__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Variable Selling Payroll</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_Vendor_Program__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Vendor Program</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_WH_Supplies__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WH Supplies</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hist_WH_Variable_Labor__c</fullName>
        <defaultValue>0</defaultValue>
        <label>WH Variable Labor</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hosted__c</fullName>
        <formula>CameleonCPQ__AccountId__r.Hosted_Catalog_Flag__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hosted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Increase_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Increase Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <formula>TEXT(CameleonCPQ__AccountId__r.Industry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Industry</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inherited_Rebates__c</fullName>
        <label>Inherited Rebates</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inherits_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inherits Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Desktop_Delivery__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Desktop Delivery?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Parents_Written_Agreement__c</fullName>
        <formula>OR(ISPICKVAL(Default_Parent__r.Legal_Flag__c, &apos;Y&apos;), 
 ISPICKVAL(Default_Grandparent__r.Legal_Flag__c, &apos;Y&apos;),
 ISPICKVAL(Default_Great_Grandparent__r.Legal_Flag__c, &apos;Y&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is_Parents_Written_Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Primary_Quote_Removable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Primary Quote Removable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Written_Agreement__c</fullName>
        <formula>ISPICKVAL(CameleonCPQ__AccountId__r.Legal_Flag__c, &apos;Y&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Written Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Term__c</fullName>
        <label>Issue_Term</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LF_Count_BSD_Pricing__c</fullName>
        <label>LF_Count_BSD_Pricing</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_Count_Hard_Stop_Follower__c</fullName>
        <label>LF_Count_Hard_Stop_Follower</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_Count_Hard_Stop_NCC__c</fullName>
        <label>LF_Count_Hard_Stop_NCC</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LF_Count_Leader_NCC__c</fullName>
        <label>LF_Count_Leader_NCC</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Less_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing should not be less than i</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MFN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Most Favored Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Managing_Director_Approval_Status__c</fullName>
        <label>Managing Director Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Managing_Director__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Managing Director</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Margin_Erosion_Price_Locks__c</fullName>
        <label>Margin Erosion $ (Price Locks)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Minimum_Order_Fee__c</fullName>
        <label>Minimum Order Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modeled_Agreement_Term__c</fullName>
        <label>Agreement Term Length</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>More_Inherited_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom pricing should not be more than i</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>More_Less_Inherited_Pricing__c</fullName>
        <description>Custom pricing should not be more or less than inherited pricing</description>
        <formula>IF(Less_Inherited_Pricing__c=True,&quot;Cannot be less&quot;,IF(More_Inherited_Pricing__c=True,&quot;Cannot be more&quot;,&quot;Contract Silent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Custom pricing should not be more or less than inherited pricing</inlineHelpText>
        <label>Custom Pricing On Inherited Core SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nb_Of_Items_on_Custom_Core__c</fullName>
        <label># Of Items on Custom Core</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nb_of_items_allowed_on_the_core__c</fullName>
        <label># of items allowed on custom core</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_IGM_Customer_Margin__c</fullName>
        <label>Net IGM / Customer Margin</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Contract_Amendment_DOA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>New Contract/Amendment Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>No_customization_on_inherited_core_sku__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customization on inherited core sku</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_Core_IGM_Perc__c</fullName>
        <label>Non-Core IGM %</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Non_standard_callout_comment_box__c</fullName>
        <label>Non-standard terms</label>
        <length>32767</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_A__c</fullName>
        <label>O&amp;A</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Office_Supplies_Price_Cap__c</fullName>
        <label>Office Supplies Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Office_Supplies_Price_Lock_days__c</fullName>
        <label>Office Supplies Update Frequency(days)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Orion Quotes</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity_Amount__c</fullName>
        <formula>OpportunityId__r.Opportunity_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Origin_Agreement_Term__c</fullName>
        <label>Origin_Agreement_Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_CC_Item_Count__c</fullName>
        <label>Origin_CC_Item_Count</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Committed_Revenue__c</fullName>
        <label>Origin_Committed_Revenue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Cost_Basis_Other__c</fullName>
        <label>Origin_Cost_Basis_Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Cost_Basis__c</fullName>
        <label>Origin_Cost_Basis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Customer_com_requirements__c</fullName>
        <label>Origin_Customer_com_requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Doc_required_to_participate__c</fullName>
        <label>Origin_Doc_required_to_participate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Follower_relationship__c</fullName>
        <label>Origin_Follower_relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Forced_inheritance_no_custom_co__c</fullName>
        <label>Origin_Forced_inheritance_no_custom_co</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Furniture_Delivery_Fee__c</fullName>
        <label>Origin_Furniture_Delivery_Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Is_Desktop_Delivery__c</fullName>
        <label>Origin_Is_Desktop_Delivery</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Less_Inherited_Pricing__c</fullName>
        <label>Origin_Less_Inherited_Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_MFN__c</fullName>
        <label>Origin_MFN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Minimum_Order_Fee__c</fullName>
        <label>Origin_Minimum_Order_Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_More_Inherited_Pricing__c</fullName>
        <label>Origin_More_Inherited_Pricing</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_No_custo_inherited__c</fullName>
        <label>Origin_No_custo_inherited</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Out_Clause__c</fullName>
        <label>Origin_Out_Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Payment_Term_Type__c</fullName>
        <label>Origin_Payment_Term_Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Renewal_Options__c</fullName>
        <label>Origin_Renewal_Options</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_Small_Order_Fee__c</fullName>
        <label>Origin_Small_Order_Fee</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Origin_StandardCallout__c</fullName>
        <label>Origin_StandardCallout</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_Clause__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Termination Clause</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outside_Services__c</fullName>
        <label>Outside Services $</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Overall_Pricing_Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Overall Pricing Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owns_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owns Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PM_Impact__c</fullName>
        <label>PM Impact</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementError__c</fullName>
        <label>Agreement Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipLabel>PROS Quotes (Agreement Record)</relationshipLabel>
        <relationshipName>PROS_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementStatus__c</fullName>
        <label>Agreement Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action_Status__c</fullName>
        <label>Agreement Action Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Action__c</fullName>
        <label>Agreement Action</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_CRM_Id__c</fullName>
        <displayFormat>AG-{0000000}</displayFormat>
        <label>Agreement CRM Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Changeset_Id__c</fullName>
        <label>Agreement Changeset Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Agreement_Id__c</fullName>
        <label>Agreement Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AllowPublishing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to determine if quote can be published to agreement service</description>
        <label>Allow Publishing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Amendment_Config_Name__c</fullName>
        <label>Amendment Config Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract Id</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Changeset History</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__EndDate__c</fullName>
        <label>End Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__MassPriceChangeItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PROS Mass Price Change Item</label>
        <referenceTo>PROSAgreement__MPCI__c</referenceTo>
        <relationshipLabel>PROS Quotes</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ParentAgreementRecord_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Agreement Record</label>
        <referenceTo>PROSAgreement__Agreement__c</referenceTo>
        <relationshipLabel>PROS Quotes</relationshipLabel>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__ParentContractId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ParentContractId</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>PROS Quotes (ParentContractId)</relationshipLabel>
        <relationshipName>PROS_Quotes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__PreviousAgreementId__c</fullName>
        <label>PreviousAgreementId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__PreviousEndDate__c</fullName>
        <label>PreviousEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__PreviousStartDate__c</fullName>
        <label>PreviousStartDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__Quote_Type__c</fullName>
        <label>Quote Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__StartDate__c</fullName>
        <label>Start Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Paper_Price_Cap__c</fullName>
        <label>Paper Price Cap</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Paper_Price_Lock_days__c</fullName>
        <label>Paper Update Frequency(days)</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Id__c</fullName>
        <formula>Parent__r.AOPS_Cust_ID_Trunc__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_NCC__c</fullName>
        <label>Parent NCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PROS Quotes (Parent)</relationshipLabel>
        <relationshipName>PROS_Quotes_Parent</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Type__c</fullName>
        <label>Payment Term Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Perf_Rebate__c</fullName>
        <description>Performance Rebate</description>
        <label>Perf Rebate</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_Change_Impact_Current_Only__c</fullName>
        <label>Price Change Impact (Current Only)</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PricingAnalyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Analyst Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PROS_Quotes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Analyst_Name__c</fullName>
        <formula>PricingAnalyst__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pricing Analyst Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Refresh_Date__c</fullName>
        <label>Pricing Refresh Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pricing_Relationship__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract allow for pricing relationships</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Quote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property__c</fullName>
        <label>Property</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Proposed_NCC__c</fullName>
        <label>Proposed NCC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pros_Quote_Owner_Name__c</fullName>
        <formula>Owner:User.Full_Name__c+IF(NOT(ISBLANK(PricingAnalyst__c)),&quot; and &quot;+PricingAnalyst__r.Full_Name__c,&quot;&quot;)+IF(AND(NOT(ISBLANK(CustomerApproverRepMail__c)),
(CustomerApproverRepMail__r.Full_Name__c!=Owner:User.Full_Name__c)),&quot; and &quot;+CustomerApproverRepMail__r.Full_Name__c,&quot;&quot;)</formula>
        <label>Quote Owner/Analyst/SalesRep</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Error__c</fullName>
        <formula>PROSAgreement__AgreementError__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish Error</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publish_Status__c</fullName>
        <formula>PROSAgreement__AgreementStatus__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Publish Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Published_Date__c</fullName>
        <label>Date Sent to Control</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QuoteAccountName__c</fullName>
        <formula>CameleonCPQ__AccountId__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuoteAccountName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Accepted_Timestamp__c</fullName>
        <label>Quote Accepted Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Quote_Expiration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quote Expiration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Number__c</fullName>
        <displayFormat>{000000000}</displayFormat>
        <label>Quote ID</label>
        <type>AutoNumber</type>
    </fields>
</CustomObject>